# glslwatch

./: Cargo.toml  license  readme.md
src/: lib.rs  preprocess.rs
src/test_glsl/: common.vert  diamond_a.vert  diamond_b.vert  diamond_c.vert  nested.vert  simple.vert
