[package]
name = "glslwatch"
version = "0.1.0"
authors = ["Payton Turnage <pt@paytonturnage.com>"]
description = "A live glsl source tree."
license = "GPLv3"
license-file = "license"
maintenance = { status = "passively-maintained" }

[dependencies]
failure = "0.1"
regex = "1.0.0"
lazy_static = "1.0.0"
maplit = "1.0.1"
rpds = "0.5.0"
itertools = "0.7.8"