[package]
name = "glslwatch"
version = "0.1.3"
authors = ["Payton Turnage <pt@paytonturnage.com>"]
description = "A live glsl source tree."
license-file = "license"
maintenance = { status = "passively-maintained" }

[lib]
doctest = false

[dependencies]
failure = "0.1"
regex = "1.0.0"
lazy_static = "1.0.0"
maplit = "1.0.1"
rpds = "0.5.0"
itertools = "0.7.8"